# war3_my_platforms

./: .gitignore  README.md
EMPTY_PROJECT/NewBot/: BNCSutil.exp  MANUAL  changelog.txt  ghost.sln  mysql_create_tables_experimental.sql
EMPTY_PROJECT/NewBot/ghost/: Makefile  bncsutilinterface.cpp  bncsutilinterface.h  bnet.cpp  bnet.h  bnetprotocol.cpp  bnetprotocol.h  bnlsclient.cpp  bnlsclient.h  config.cpp  config.h  crc32.cpp  game.cpp  game.h  game_admin.cpp  game_admin.h  game_base.cpp  game_base.h  gameplayer.cpp  gameplayer.h  gameprotocol.cpp  gameprotocol.h  gameslot.h  (+24 more)
EMPTY_PROJECT/NewBot/ghost configurator/: MainWindow.Designer.vb  app.config
EMPTY_PROJECT/NewClient/: NewClient.sln
EMPTY_PROJECT/RichTextBlockSample/: App.xaml  App.xaml.cs  HtmlRichTextBoxBehavior.cs  MainWindow.xaml  MainWindow.xaml.cs  RichTextBlockSample.csproj  RichTextBlockSample.sln
GHOST_BOT/: ghost1.sql
GHOST_BOT/ghostcb/: ghost.dbs
GHOST_BOT/ghostcb(old)/: UpgradeLog.htm  ghost.sln
GHOST_BOT/ghostcb_no_boost/: default.cfg  ghost cb readme.txt  language_spanish.cfg  language_turkish.cfg
PVPGN_SERVER/: README.md
PVPGN_SERVER/Release/: libmysql.dll_  mapcodes.txt
PVPGN_SERVER/mapcfgs_backup/: dota88_1x1.cfg  dotalod_3x3.cfg  dotalod_5x5.cfg
PVPGN_SERVER/source/: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  UPDATE  version-history.txt
PVPGN_SERVER/vs-project/: pvpgn.sln
PVPGN_SERVER/ИНСТРУКЦИИ_ПО_ЗАПУСКУ_СЕРВЕРА/: Обновление AMH.dll.txt  Обновление клиента.txt  Подготовка сервера.txt
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/ftp/: FTPClient.h
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/mapcfgs_backup/: dota_il_1x1.cfg  dota_imba_3x3.cfg
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/maphostcodes_backup/: DotA Allstars 6.88t.w3x.ini
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/module/: i18n.inc.bat
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/: .gitignore  CMakeLists.txt  CREDITS  ConfigureChecks.cmake  NEWS  README.DEV  README.md  README_DOCKER.md  appveyor.yml  bionic.dockerfile  config.h.cmake  docker-compose.yml
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/conf/: CMakeLists.txt  address_translation.conf.in  bnetd.conf.in  bnetd.conf.win32  d2cs.conf.in  d2gs.reg.in  email_verification.conf.in
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/src/compat/: CMakeLists.txt  gmtime_s.h  localtime_s.cpp  strerror.cpp
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/src/d2dbs/: CMakeLists.txt  connection.cpp  dbserver.h  handle_d2gs.cpp  handle_signal.cpp  handle_signal.h  main.cpp  setup.h
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/src/d2gs/: CMakeLists.txt  callback.cpp  charlist.h  config.cpp  config.h  d2cs_d2gs_character.h  d2cs_d2gs_protocol.h  d2dbs_d2gs_protocol.h  d2gamelist.h  d2ge.cpp  d2ge.h  d2gs.h  debug.cpp  debug.h  eventlog.h  handle_s2s.cpp  handle_s2s.h  hexdump.cpp  hexdump.h  list.h  net.h  server.cpp  server.h  telnetd.cpp  telnetd.h  timer.cpp  utils.h  vars.cpp  vars.h  versioncheck.cpp
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/src/d2server_patches/: 1.asm  CMakeLists.txt
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/source/src/d2warden/: CMakeLists.txt  HashGameSeed.asm  MyHashGameSeed.cpp  d2callstub.cpp  d2callstub.h  d2ptrs.h  d2warden.cpp
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/vs-project/: config.h
PVPGN_SERVER[ONE_FOR_TWO_CLIENTS]/ИНСТРУКЦИИ_ПО_ЗАПУСКУ_СЕРВЕРА/: ANTIHACK_PACKET[For_Developers].txt  Обновление клиента.txt  Подготовка сервера.txt
REBIRTH_CLIENT/Client/: War3Client.sln  bat.bat
REBIRTH_CLIENT[DONE_90%]/MapUploaderProject/: MapUploader.sln
WARCIS_CLIENT/: README.md
WARCIS_CLIENT/PvPGN_LaunchAH/: Gam_.lib  GenerateKeyForWarcis.bat  SignClientMaterialSkin.bat  SignGAME.bat  SignINTELJPEG.bat  SignStormLib.bat  SignWC3.bat  d3d8.fix  voicechat.h
WARCIS_CLIENT[DONE_99%]/: MySQL.conf.bat
WARCIS_CLIENT[DONE_99%]/PvPGN_LaunchAH/: LauncherProtect.crproj  PvPGN_LaunchAH.sln  SignClient.bat  SignClientAMH.bat  SignClientClientUpdater.bat  SignClientDbgHelp.bat  SignClientLauncher.bat  SignClientMaterialSkin.bat  SignClientWar3injector.bat  SignINTELJPEG.bat  SignStormLib.bat  SignWC3.bat  Signd3d8.bat  WarcisRoot.cer  WarcisRoot.pvk  keykey.txt  warcis.mpq  ошибка сборки portaudio.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/: GameListMenu.txt  MapConfigExample.txt  README.md  ServerMapConfigTemplate.txt  ServerPlugin_Дополнительно(1).txt  ServerPlugin_Переименование(3).txt  ServerPlugin_Регистрация(2).txt  build_d2gs.bat  build_pvpgn.bat  pvpgn1.sql  Подготовка сервера.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/MapUploader/: MapDownload.php  MapRatingChange.php  MapUpload.php  bot_reloadmaplist.php  bottest.php  bottest2.php
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/PvPGN_LaunchAH/: Features.txt  LauncherProtect.crproj  PvPGN_LaunchAH.sln  SignClientClientUpdater.bat  SignClientDbgHelp.bat  SignGAME.bat  Signd3d8.bat  фтп_usr_сп#сок.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/Release/: DotA v6.83d.ini  dblist_.txt  log.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/ftp/: FTPClient.cpp
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/ghostcb/: changelog.txt  readme_mod_legacy.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/ghostcb_no_boost/: ghost cb changelog.txt  language.cfg  language_russian.cfg  readme.txt  readme_mod.txt
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/mapcfgs_backup/: dota88_3x3.cfg  dota88_5x5.cfg  dota_1x1.cfg  dota_default.cfg  dota_il_default.cfg  dota_imba_5x5.cfg  dota_lod_default.cfg  dotalod_1x1.cfg  wormwar.cfg
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/maphostcodes_backup/: DotA LoD 6.85j6.w3x.ini  DotA v6.83d.ini
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/module/: dbchoice.inc.bat  select_generator.inc.bat
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/tasdf/: ACG1.796official.w3x.ini  DotA LoD 6.85l3.w3x.ini  DotA v6.83d.w3x.ini  Gem TD v4.0.w3x.ini  SBR.AMHfix3.w3x.ini  twrpgS4v0.06j5_eng.w3x.ini
WARCIS_CLIENT_BOT_AND_SERVER[DONE_99%]/Инструкции_для_admin/: Запуск сервера с нуля.txt  Обновление клиента.txt
WEB/MapUploader/: bot_reloadmaplist.php  bot_update_amh_crc.php
WEB[XENFORO_ADDON_AND_MAP_UPLOADER]/MapUploader/: PrintMapList.php  bot_update_amh_crc.php  index.html
(+4599 files in other folders)
